--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_diario_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_003_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_004_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Bus.cs" />
