--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -888,6 +888,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_diario_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_003_Data.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_004_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Data.cs" />
@@ -1222,6 +1223,9 @@
     </Compile>
     <Compile Include="spcp_Get_Data_orden_pago_con_cancelacion_x_pago_Result.cs">
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SPCXC_004_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="SPCXP_007_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
