--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_diario_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_003_Info.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_004_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Info.cs" />
