--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8974,6 +8974,8 @@
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_004.cshtml" />
     <Content Include="Areas\Reportes\Views\BancoReportes\BAN_007.cshtml" />
     <Content Include="Areas\Reportes\Views\BancoReportes\_CmbPersona_Banco.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\INV_009.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\_CmbProductoPadre_Inventario.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
