--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8982,6 +8982,9 @@
     <Content Include="Areas\Reportes\Views\BancoReportes\_CmbPersona_Banco.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_009.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\_CmbProductoPadre_Inventario.cshtml" />
+    <Content Include="Areas\Reportes\Views\ImportacionReportes\IMP_003.cshtml" />
+    <Content Include="Areas\Reportes\Views\ImportacionReportes\_CmbProductoPadre_Importacion.cshtml" />
+    <Content Include="Areas\Reportes\Views\ImportacionReportes\_CmbProveedor_Importacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9267,6 +9270,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Importacion\IMP_001_Rpt.resx">
       <DependentUpon>IMP_001_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Importacion\IMP_003_Rpt.resx">
+      <DependentUpon>IMP_003_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Inventario\INV_001_Rpt.resx">
       <DependentUpon>INV_001_Rpt.cs</DependentUpon>
