--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8930,7 +8930,7 @@
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_007.cshtml" />
     <Content Include="Areas\Importacion\Views\OrdenCompraExterior\_GridViewPartial_orden_compra_con_saldo.cshtml" />
     <Content Include="Areas\Importacion\Views\OrdenCompraExterior\OrdencompraConsaldos.cshtml" />
-    <Content Include="Areas\Importacion\Views\ParametrosImportacion\_CmbCuenta_contable.cshtml" />
+    <Content Include="Areas\Importacion\Views\ParametrosImportacion\_CmbCuenta_contable_imp.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_GridViewPartial_CruceNC.cshtml" />
     <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_GridViewPartial_CruceNC_x_cruzar.cshtml" />
     <Content Include="Areas\Importacion\Views\AsignacionDeGastos\Nuevo.cshtml" />
@@ -8992,6 +8992,7 @@
     <Content Include="Areas\Reportes\Views\ImportacionReportes\_CmbProductoPadre_Importacion.cshtml" />
     <Content Include="Areas\Reportes\Views\ImportacionReportes\_CmbProveedor_Importacion.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_010.cshtml" />
+    <Content Include="Areas\Importacion\Views\ParametrosImportacion\_CmbCuenta_contable_inv.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
