--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -530,7 +530,7 @@
     <Compile Include="Importacion\imp_catalogo_tipo_Data.cs" />
     <Compile Include="Importacion\imp_gasto_Data.cs" />
     <Compile Include="Importacion\imp_gasto_x_ct_plancta_Data.cs" />
-    <Compile Include="Importacion\imp_liquidacion_det_x_imp_orden_compra_ext_Data.cs" />
+    <Compile Include="Importacion\imp_liquidacion_Data.cs" />
     <Compile Include="Importacion\imp_ordencompra_ext_Data.cs" />
     <Compile Include="Importacion\imp_ordencompra_ext_det_Data.cs" />
     <Compile Include="Importacion\imp_orden_compra_ext_ct_cbteble_det_gastos_Data.cs" />
@@ -549,9 +549,6 @@
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="imp_liquidacion.cs">
-      <DependentUpon>Model_importacion.tt</DependentUpon>
-    </Compile>
-    <Compile Include="imp_liquidacion_det_x_imp_orden_compra_ext.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="imp_orden_compra_ext.cs">
@@ -1594,7 +1591,7 @@
     <Compile Include="vwimp_gastos_no_asignados.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
-    <Compile Include="vwimp_liquidacion_det_x_imp_orden_compra_ext.cs">
+    <Compile Include="vwimp_liquidacion.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwimp_orden_compra_ext.cs">
@@ -1607,6 +1604,9 @@
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwimp_orden_compra_ext_det.cs">
+      <DependentUpon>Model_importacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwimp_orden_compra_ext_por_liquidar.cs">
       <DependentUpon>Model_importacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwimp_orden_compra_ext_recepcion.cs">
