--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -7511,6 +7511,7 @@
     <Content Include="Content\bootstrap_imagenes.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\videos\IMPO_M.mp4" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -9000,6 +9001,7 @@
     <Content Include="Areas\General\Views\VisorDeVideo\Anular.cshtml" />
     <Content Include="Areas\General\Views\VisorDeVideo\Modificar.cshtml" />
     <Content Include="Areas\General\Views\VisorDeVideo\Nuevo.cshtml" />
+    <Content Include="Areas\General\Views\VisorDeVideo\ReproducirVideo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
