--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -7511,7 +7511,27 @@
     <Content Include="Content\bootstrap_imagenes.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\videos\ACCE_M.mp4" />
+    <Content Include="Content\videos\ACTF_P.mp4" />
+    <Content Include="Content\videos\ACTF_T.mp4" />
+    <Content Include="Content\videos\BANC_M.mp4" />
+    <Content Include="Content\videos\BANC_P.mp4" />
+    <Content Include="Content\videos\BANC_T.mp4" />
+    <Content Include="Content\videos\CAJA_M.mp4" />
+    <Content Include="Content\videos\CAJA_T.mp4" />
+    <Content Include="Content\videos\CXC_M.mp4" />
+    <Content Include="Content\videos\CXC_T.mp4" />
+    <Content Include="Content\videos\FAC_M.mp4" />
+    <Content Include="Content\videos\FAC_T.mp4" />
+    <Content Include="Content\videos\GENE.mp4" />
     <Content Include="Content\videos\IMPO_M.mp4" />
+    <Content Include="Content\videos\IMPO_T.mp4" />
+    <Content Include="Content\videos\INV_M.mp4" />
+    <Content Include="Content\videos\INV_P.mp4" />
+    <Content Include="Content\videos\INV_T.mp4" />
+    <Content Include="Content\videos\RRHH_M.mp4" />
+    <Content Include="Content\videos\RRHH_P.mp4" />
+    <Content Include="Content\videos\RRHH_T.mp4" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
