--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -172,6 +172,7 @@
     <Compile Include="General\tb_CatalogoTipo_Info.cs" />
     <Compile Include="General\tb_Catalogo_Info.cs" />
     <Compile Include="General\tb_ciudad_Info.cs" />
+    <Compile Include="General\tb_comprobantes_sin_autorizacion_Info.cs" />
     <Compile Include="General\tb_empresa_Info.cs" />
     <Compile Include="General\tb_mes_Info.cs" />
     <Compile Include="General\tb_modulo_Info.cs" />
