--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -298,6 +298,7 @@
     <Compile Include="Areas\General\Controllers\CatalogoController.cs" />
     <Compile Include="Areas\General\Controllers\CatalogoTipoController.cs" />
     <Compile Include="Areas\General\Controllers\CiudadController.cs" />
+    <Compile Include="Areas\General\Controllers\ComprobantesSinAutorizacionController.cs" />
     <Compile Include="Areas\General\Controllers\DisenadorReporteController.cs" />
     <Compile Include="Areas\General\Controllers\EmpresaController.cs" />
     <Compile Include="Areas\General\Controllers\ImagenesController.cs" />
@@ -9074,6 +9075,7 @@
     <Folder Include="Areas\CuentasPorPagar\Models\" />
     <Folder Include="Areas\Facturacion\Models\" />
     <Folder Include="Areas\General\Models\" />
+    <Folder Include="Areas\General\Views\ComprobantesSinAutorizacion\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Reportes\Models\" />
