--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9002,6 +9002,8 @@
     <Content Include="Areas\General\Views\VisorDeVideo\Modificar.cshtml" />
     <Content Include="Areas\General\Views\VisorDeVideo\Nuevo.cshtml" />
     <Content Include="Areas\General\Views\VisorDeVideo\ReproducirVideo.cshtml" />
+    <Content Include="Areas\General\Views\ComprobantesSinAutorizacion\Index.cshtml" />
+    <Content Include="Areas\General\Views\ComprobantesSinAutorizacion\_GridViewPartial_documentos_pendientes_enviar_sri.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9076,7 +9078,6 @@
     <Folder Include="Areas\CuentasPorPagar\Models\" />
     <Folder Include="Areas\Facturacion\Models\" />
     <Folder Include="Areas\General\Models\" />
-    <Folder Include="Areas\General\Views\ComprobantesSinAutorizacion\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Reportes\Models\" />
