--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1666,6 +1666,9 @@
     <Compile Include="vwin_producto_padre_combo.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwin_Producto_Stock.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwin_producto_x_tb_bodega_stock_x_lote.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
