--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9004,6 +9004,8 @@
     <Content Include="Areas\General\Views\VisorDeVideo\ReproducirVideo.cshtml" />
     <Content Include="Areas\General\Views\ComprobantesSinAutorizacion\Index.cshtml" />
     <Content Include="Areas\General\Views\ComprobantesSinAutorizacion\_GridViewPartial_documentos_pendientes_enviar_sri.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\Deudas\_CmbProveedor_CXP.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\NotaCredito\_CmbProveedor_CXP.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
