--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9006,6 +9006,7 @@
     <Content Include="Areas\General\Views\ComprobantesSinAutorizacion\_GridViewPartial_documentos_pendientes_enviar_sri.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_CmbProveedor_CXP.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\NotaCredito\_CmbProveedor_CXP.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_producto_por_bodega.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
