--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -580,6 +580,7 @@
     <Compile Include="Inventario\in_Producto_Composicion_Data.cs" />
     <Compile Include="Inventario\in_Producto_Data.cs" />
     <Compile Include="Inventario\in_producto_x_tb_bodega_Costo_Historico_Data.cs" />
+    <Compile Include="Inventario\in_producto_x_tb_bodega_Data.cs" />
     <Compile Include="Inventario\in_subgrupo_Data.cs" />
     <Compile Include="Inventario\in_transferencia_Data.cs" />
     <Compile Include="Inventario\in_transferencia_det_Data.cs" />
