--- a/ERP/Core.Erp.Data/App.Config
+++ b/ERP/Core.Erp.Data/App.Config
@@ -2,8 +2,8 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="Entities_general" connectionString="metadata=res://*/Model_general.csdl|res://*/Model_general.ssdl|res://*/Model_general.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DBERP_RAPI_PRODUCCION;persist security info=True;user id=sa;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entities_activo_fijo" connectionString="metadata=res://*/Model_activo_fijo.csdl|res://*/Model_activo_fijo.ssdl|res://*/Model_activo_fijo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DBERP_RAPI_PRODUCCION;persist security info=True;user id=sa;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
