--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -249,6 +249,8 @@
     <Compile Include="Areas\Caja\Controllers\ConciliacionCajaController.cs" />
     <Compile Include="Areas\Caja\Controllers\ParametroCajaController.cs" />
     <Compile Include="Areas\Caja\Controllers\TipoMovimientoCajaController.cs" />
+    <Compile Include="Areas\Compras\ComprasAreaRegistration.cs" />
+    <Compile Include="Areas\Compras\Controllers\CatalogoTipoComprasController.cs" />
     <Compile Include="Areas\Contabilidad\ContabilidadAreaRegistration.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\AnioFiscalController.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\ATSController.cs" />
@@ -9009,6 +9011,10 @@
     <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_producto_por_bodega.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_GridViewPartial_deudas_det.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_CmbProducto_deudas.cshtml" />
+    <Content Include="Areas\Compras\Views\web.config" />
+    <Content Include="Areas\Compras\Views\CatalogoTipoCompras\Index.cshtml" />
+    <Content Include="Areas\Compras\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Compras\Views\CatalogoTipoCompras\_GridViewPartial_catipocompras.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9077,6 +9083,7 @@
     <Folder Include="Areas\ActivoFijo\Models\" />
     <Folder Include="Areas\Banco\Models\" />
     <Folder Include="Areas\Caja\Models\" />
+    <Folder Include="Areas\Compras\Models\" />
     <Folder Include="Areas\Contabilidad\Models\" />
     <Folder Include="Areas\Contabilidad\Views\PuntoCargo\" />
     <Folder Include="Areas\CuentasPorCobrar\Models\" />
