--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Caja\cp_conciliacion_Caja_det_x_ValeCaja_Bus.cs" />
     <Compile Include="Compras\com_catalogo_Bus.cs" />
     <Compile Include="Compras\com_catalogo_tipo_Bus.cs" />
+    <Compile Include="Compras\com_comprador_Bus.cs" />
     <Compile Include="Contabilidad\ats_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Bus.cs" />
