--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Caja\cp_conciliacion_Caja_Info.cs" />
     <Compile Include="Compras\com_catalogo_Info.cs" />
     <Compile Include="Compras\com_catalogo_tipo_Info.cs" />
+    <Compile Include="Compras\com_comprador_Info.cs" />
     <Compile Include="Contabilidad\ATS\ATS_Info\ats_Info.cs" />
     <Compile Include="Contabilidad\ATS\ATS_Info\compras_Info.cs" />
     <Compile Include="Contabilidad\ATS\ATS_Info\comprobantesAnulados_info.cs" />
