--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Areas\Compras\ComprasAreaRegistration.cs" />
     <Compile Include="Areas\Compras\Controllers\CatalogoComprasController.cs" />
     <Compile Include="Areas\Compras\Controllers\CatalogoTipoComprasController.cs" />
+    <Compile Include="Areas\Compras\Controllers\CompradorController.cs" />
     <Compile Include="Areas\Contabilidad\ContabilidadAreaRegistration.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\AnioFiscalController.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\ATSController.cs" />
@@ -9024,6 +9025,8 @@
     <Content Include="Areas\Compras\Views\CatalogoCompras\Nuevo.cshtml" />
     <Content Include="Areas\Compras\Views\CatalogoCompras\Modificar.cshtml" />
     <Content Include="Areas\Compras\Views\CatalogoCompras\Anular.cshtml" />
+    <Content Include="Areas\Compras\Views\Comprador\Index.cshtml" />
+    <Content Include="Areas\Compras\Views\Comprador\_GridViewPartial_comprador.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
