--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Compras\com_catalogo_Data.cs" />
     <Compile Include="Compras\com_catalogo_tipo_Data.cs" />
     <Compile Include="Compras\com_comprador_Data.cs" />
+    <Compile Include="Compras\com_departamento_Data.cs" />
     <Compile Include="Compras\com_estado_cierre_Data.cs" />
     <Compile Include="com_catalogo.cs">
       <DependentUpon>Model_compras.tt</DependentUpon>
@@ -187,6 +188,9 @@
       <DependentUpon>Model_compras.tt</DependentUpon>
     </Compile>
     <Compile Include="com_comprador.cs">
+      <DependentUpon>Model_compras.tt</DependentUpon>
+    </Compile>
+    <Compile Include="com_departamento.cs">
       <DependentUpon>Model_compras.tt</DependentUpon>
     </Compile>
     <Compile Include="com_estado_cierre.cs">
