--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -544,6 +544,7 @@
     <Compile Include="generarATS_Result.cs">
       <DependentUpon>Model_contabilidad.tt</DependentUpon>
     </Compile>
+    <Compile Include="Helps\FilesHelper.cs" />
     <Compile Include="Importacion\imp_catalogo_Data.cs" />
     <Compile Include="Importacion\imp_catalogo_tipo_Data.cs" />
     <Compile Include="Importacion\imp_gasto_Data.cs" />
@@ -2090,8 +2091,6 @@
       <Name>Core.Erp.Info</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Helps\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
