--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -518,6 +518,7 @@
     <Compile Include="fa_Vendedor.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
+    <Compile Include="General\tbl_usuario_ftp_Data.cs" />
     <Compile Include="General\tb_banco_Data.cs" />
     <Compile Include="General\tb_bodega_Data.cs" />
     <Compile Include="General\tb_CatalogoTipo_Data.cs" />
