--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Compras\com_departamento_Bus.cs" />
     <Compile Include="Compras\com_estado_cierre_Bus.cs" />
     <Compile Include="Compras\com_parametro_Bus.cs" />
+    <Compile Include="Compras\com_TerminoPago_Bus.cs" />
     <Compile Include="Contabilidad\ats_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Bus.cs" />
