--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Compras\com_departamento_Info.cs" />
     <Compile Include="Compras\com_estado_cierre_Info.cs" />
     <Compile Include="Compras\com_parametro_Info.cs" />
+    <Compile Include="Compras\com_TerminoPago_Info.cs" />
     <Compile Include="Contabilidad\ATS\ATS_Info\ats_Info.cs" />
     <Compile Include="Contabilidad\ATS\ATS_Info\compras_Info.cs" />
     <Compile Include="Contabilidad\ATS\ATS_Info\comprobantesAnulados_info.cs" />
