--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1301,6 +1301,9 @@
     <Compile Include="spSys_inv_Reversar_aprobacion_Result.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
+    <Compile Include="tbl_usuario_ftp.cs">
+      <DependentUpon>Model_general.tt</DependentUpon>
+    </Compile>
     <Compile Include="tb_banco.cs">
       <DependentUpon>Model_general.tt</DependentUpon>
     </Compile>
