--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8800,7 +8800,7 @@
     <Content Include="Areas\Banco\Views\ChequeBanco\_CmbPersona_ChequeBanco.cshtml" />
     <Content Include="Areas\Banco\Views\ChequeBanco\_GridViewPartial_cheque_op_x_cruzar.cshtml" />
     <Content Include="Areas\Banco\Views\ChequeBanco\_GridViewPartial_cheque_op.cshtml" />
-    <Content Include="Areas\Reportes\Views\RRHHReportes\ROl_014.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_014.cshtml" />
     <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\Nuevo.cshtml" />
     <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\Modificar.cshtml" />
     <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\Index.cshtml" />
