--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -553,7 +553,7 @@
     <Compile Include="generarATS_Result.cs">
       <DependentUpon>Model_contabilidad.tt</DependentUpon>
     </Compile>
-    <Compile Include="Helps\FilesHelper.cs" />
+    <Compile Include="Helps\FilesHelper_Data.cs" />
     <Compile Include="Importacion\imp_catalogo_Data.cs" />
     <Compile Include="Importacion\imp_catalogo_tipo_Data.cs" />
     <Compile Include="Importacion\imp_gasto_Data.cs" />
